# ParallelProgramming

./: .gitignore  task.txt
MPI/MPI_Comm/: main.c
MPI/MPI_Send/: main.c  mpi_send
MPI/files/: out.txt
MPI/hello_world/: main.c
MPI/lab1/: convection_eq.h  delay  delay.c  main  main.ipynb  utils.h
MPI/life/: CMakeLists.txt  main.cpp  main.ipynb  utils.h
MPI/number_e/: gmp.h  number_e
MPI/one_side_comm/: main  main.c
MPI/round_trip/: main.c
MPI/server_client/: client  server  server.c
MPI/sorting/: main.c  sort.h
MPI/sum_1_n/: main.c
MPI_Comm/: mpi_comm
OpenCL/: a.out  main.cpp
OpenMP/diff_eq/: Makefile  diff.c  graphs.ipynb
OpenMP/fft/: Makefile  a.out  fft.c  graphs.ipynb  main.c
OpenMP/hello_world/: Makefile  hello_world  main.c
OpenMP/lab/: 1  1_par  1z.c  2  2_par  2e.c  Makefile  dep.txt  et  et.c  et_par  graphs.ipynb
OpenMP/matrices/: Makefile  main.c  matrix.h  test_matrix
OpenMP/nested/: Makefile  main.c  nested
OpenMP/schedule/: Makefile  main.c  test_sched
OpenMP/ser_access/: Makefile  main.c  ser_access
OpenMP/sorting/: Makefile  main.c  sorting.h  test_soting
OpenMP/sum_1_n/: Makefile  main.c  sum_1_n
files/: main  main.c
hello_world/: hello  job.sh
lab1/: convection_eq.h  delay.c  main  main.c  main.ipynb  utils.h
life/: CMakeLists.txt  graphics.h  life  life.h  main.ipynb  utils.h
number_e/: job.sh  main.c  number_e
round_trip/: job.sh  main.c  round_trip
server_client/: client.c  main  main.c
sorting/: main  main.c  main.ipynb  sort.h  utils.h
sum_1_n/: job.sh  main.c  sum  sum_1_n
(+12 files in other folders)
